# N-Body-simulations-using-Kokkos

./: .gitignore  README.md  benchmarks.py  benchmarks_graphs.py  galaxy.py  vizualize.py
content/codes/: kokkos.cpp  original.cpp
data/: galaxy_1.txt  galaxy_10.txt  galaxy_2.txt  galaxy_3.txt  galaxy_4.txt  galaxy_5.txt  galaxy_6.txt  galaxy_7.txt  galaxy_8.txt  galaxy_9.txt
datasets/NBODY_CUDA_LEFT/galaxy_1/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  time_tot_2_0.1_5.npy  time_tot_error_2_0.1_5.npy
datasets/NBODY_CUDA_LEFT/galaxy_10/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  time_tot_2_0.1_5.npy  time_tot_error_2_0.1_5.npy
datasets/NBODY_CUDA_LEFT/galaxy_11/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  time_tot_2_0.1_5.npy  time_tot_error_2_0.1_5.npy
datasets/NBODY_CUDA_LEFT/galaxy_12/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  time_tot_2_0.1_5.npy  time_tot_error_2_0.1_5.npy
datasets/NBODY_CUDA_LEFT/galaxy_13/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  time_tot_2_0.1_5.npy  time_tot_error_2_0.1_5.npy
datasets/NBODY_CUDA_LEFT/galaxy_14/: bandwidth_2_0.1_5.npy  bandwidth_error_2_0.1_5.npy  time_par_2_0.1_5.npy  time_par_error_2_0.1_5.npy  time_seq_2_0.1_5.npy  time_seq_error_2_0.1_5.npy  (+2 more)
simulations/: position_x.txt  position_y.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
(+964 files in other folders)
